SERVER-46085 Fail initial sync attempt if sync source is in initial sync
(cherry picked from commit b70908c4898c4b02d8c70df3f796fa3e8cfe5bdd)

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -623,10 +623,17 @@ env.Library(
     ],
 )
 
+env.Library('member_data',
+            [
+                'member_data.cpp',
+            ],
+            LIBDEPS=[
+                'replica_set_messages',
+            ])
+
 env.Library('topology_coordinator',
             [
                 'heartbeat_response_action.cpp',
-                'member_data.cpp',
                 'topology_coordinator.cpp',
                 env.Idlc('topology_coordinator.idl')[0],
             ],
@@ -635,6 +642,7 @@ env.Library('topology_coordinator',
                 '$BUILD_DIR/mongo/rpc/metadata',
                 '$BUILD_DIR/mongo/util/fail_point',
                 'isself',
+                'member_data',
                 'replica_set_messages',
                 'repl_settings',
                 'rslog',
@@ -931,6 +939,8 @@ env.Library(
     LIBDEPS = [
         'task_runner',
         'initial_sync_shared_data',
+        'member_data',
+        'replication_consistency_markers_impl',
         '$BUILD_DIR/mongo/base',
         '$BUILD_DIR/mongo/client/clientdriver_network',
         '$BUILD_DIR/mongo/util/concurrency/thread_pool',
