--- a/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
@@ -3,6 +3,8 @@ test_kind: js_test
 selector:
   roots:
   - jstests/sharding/*.js
+  - jstests/sharding/change_streams/*.js
+  - jstests/sharding/query/*.js
   exclude_files:
   # Auth tests require authentication on the stepdown thread's connection
   - jstests/sharding/auth*.js
@@ -10,8 +12,8 @@ selector:
   - jstests/sharding/localhostAuthBypass.js
   - jstests/sharding/kill_sessions.js
   - jstests/sharding/mongos_rs_auth_shard_failure_tolerance.js
-  - jstests/sharding/mrShardedOutputAuth.js
-  - jstests/sharding/aggregation_currentop.js
+  - jstests/sharding/query/mrShardedOutputAuth.js
+  - jstests/sharding/query/aggregation_currentop.js
   - jstests/sharding/advance_cluster_time_action_type.js
   - jstests/sharding/mongod_returns_no_cluster_time_without_keys.js
   # Count/write/aggregate commands against the config shard do not support retries yet
@@ -24,7 +26,7 @@ selector:
   - jstests/sharding/basic_merge.js
   - jstests/sharding/count1.js
   - jstests/sharding/count2.js
-  - jstests/sharding/current_op_with_drop_shard.js
+  - jstests/sharding/query/current_op_with_drop_shard.js
   - jstests/sharding/cursor1.js
   - jstests/sharding/diffservers1.js
   - jstests/sharding/disable_autosplit.js
@@ -32,7 +34,7 @@ selector:
   - jstests/sharding/drop_sharded_db.js
   - jstests/sharding/findandmodify1.js
   - jstests/sharding/findandmodify2.js
-  - jstests/sharding/geo_near_sharded.js
+  - jstests/sharding/query/geo_near_sharded.js
   - jstests/sharding/hash_basic.js
   - jstests/sharding/hash_shard1.js
   - jstests/sharding/hash_shard_non_empty.js
@@ -195,13 +197,13 @@ selector:
   # Tests that rely on shards becoming aware of collection drops regardless of config stepdowns.
   # (SERVER-34760)
   - jstests/sharding/merge_requires_unique_index.js
-  - jstests/sharding/merge_stale_on_fields.js
-  - jstests/sharding/out_fails_to_replace_sharded_collection.js
+  - jstests/sharding/query/merge_stale_on_fields.js
+  - jstests/sharding/query/out_fails_to_replace_sharded_collection.js
   # In this suite the cluster may end up in a state where each shard believes the
   # collection is sharded and the mongos believes it is unsharded. $merge is not
   # prepared to work correctly in this situation. This should be fixed by a future
   # improvement in sharding infrastructure, and can be unblacklisted by SERVER-40172.
-  - jstests/sharding/merge_to_existing.js
+  - jstests/sharding/query/merge_to_existing.js
   # Sets a failpoint on find commands which can lead to a hang when a config steps down.
   - jstests/sharding/sharding_statistics_server_status.js
   # setShardVersion is not robust during config server stepdown.
