--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -6333,6 +6333,8 @@ buildvariants:
   - name: tool
   - name: write_concern_majority_passthrough
   - name: push
+    distros:
+    - rhel62-small
 
 - name: linux-64-repeated-execution
   stepback: false
@@ -6633,6 +6635,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - ubuntu1804-small
 
 - name: enterprise-ubuntu1804-64
   display_name: Enterprise Ubuntu 18.04
@@ -6691,6 +6695,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - ubuntu1804-small
 
 - name: ubuntu1604
   display_name: SSL Ubuntu 16.04
@@ -6821,6 +6827,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - ubuntu1604-small
 
 - name: enterprise-ubuntu1604-arm64
   display_name: Enterprise Ubuntu 16.04 arm64
@@ -7198,6 +7206,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - linux-64-amzn-small
 
 - name: amazon
   display_name: SSL Amazon Linux
@@ -7289,6 +7299,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - linux-64-amzn-small
 
 - name: enterprise-amazon2
   display_name: "Enterprise Amazon Linux 2"
@@ -7366,6 +7378,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - amazon2-small
 
 - name: amazon2
   display_name: SSL Amazon Linux 2
@@ -7461,6 +7475,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - amazon2-small
 
 ###########################################
 #         Windows buildvariants           #
@@ -8393,7 +8409,7 @@ buildvariants:
     - rhel62-large
   - name: replica_sets_initsync_static_jscore_passthrough
     distros:
-    - rhel62-large
+    - rhel62-small
   - name: replica_sets_multi_stmt_txn_jscore_passthrough
     distros:
     - rhel62-large
@@ -8442,6 +8458,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - rhel62-small
 
 - name: enterprise-rhel-62-64-bit-majority-read-concern-off
   display_name: "Enterprise RHEL 6.2 (majority read concern off)"
@@ -8788,7 +8806,7 @@ buildvariants:
     - ubuntu1604-packer
   - name: push
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: enterprise-rhel-80-64-bit
   display_name: "Enterprise RHEL 8.0"
@@ -8853,6 +8871,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - rhel80-small
 
 # This variant is to intentionally test uncommon features nightly
 - <<: *enterprise-rhel-70-64-bit-template
@@ -8993,6 +9013,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - rhel62-small
 
 - name: rhel70
   display_name: SSL RHEL 7.0
@@ -9093,7 +9115,7 @@ buildvariants:
     - ubuntu1604-packer
   - name: push
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: rhel80
   display_name: SSL RHEL 8.0
@@ -9193,6 +9215,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - rhel80-small
 
 - name: enterprise-rhel-71-ppc64le
   display_name: Enterprise RHEL 7.1 PPC64LE
@@ -9301,7 +9325,7 @@ buildvariants:
   - name: secondary_reads_passthrough_gen
   - name: push
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: enterprise-rhel-72-s390x
   display_name: Enterprise RHEL 7.2 s390x
@@ -9409,7 +9433,7 @@ buildvariants:
   - name: secondary_reads_passthrough_gen
   - name: push
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: enterprise-rhel-67-s390x
   display_name: Enterprise RHEL 6.7 s390x
@@ -9508,7 +9532,7 @@ buildvariants:
   - name: secondary_reads_passthrough_gen
   - name: push
     distros:
-    - rhel62-large
+    - rhel62-small
 
 ###########################################
 #          Ubuntu buildvariants           #
@@ -9601,6 +9625,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - ubuntu1404-small
 
 - name: enterprise-ubuntu1404-64
   display_name: Enterprise Ubuntu 14.04
@@ -9655,6 +9681,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - ubuntu1404-small
 
 - name: enterprise-ubuntu1604-64
   display_name: Enterprise Ubuntu 16.04
@@ -9733,6 +9761,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - ubuntu1604-small
 
 
 - name: enterprise-ubuntu-dynamic-1604-clang-3.8-libcxx
@@ -9827,6 +9857,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - suse12-small
 
 
 - name: enterprise-suse12-s390x
@@ -10021,6 +10053,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - suse12-small
 
 ###########################################
 #          Debian buildvariants           #
@@ -10078,6 +10112,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - debian81-small
 
 - name: debian81
   display_name: SSL Debian 8.1
@@ -10167,6 +10203,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - debian81-small
 
 - name: enterprise-debian92-64
   display_name: Enterprise Debian 9.2
@@ -10223,6 +10261,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - debian92-small
 
 - name: debian92
   display_name: SSL Debian 9.2
@@ -10315,6 +10355,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: push
+    distros:
+    - debian92-small
 
 ################################
 # storage engine buildvariants #
