--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -8713,6 +8713,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - ubuntu1804-small
 
 - name: enterprise-ubuntu1804-64
   display_name: Enterprise Ubuntu 18.04
@@ -8768,6 +8770,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - ubuntu1804-small
 
 - name: ubuntu1604
   display_name: Ubuntu 16.04
@@ -8831,6 +8835,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - ubuntu1604-small
 
 - name: enterprise-ubuntu1604-arm64
   display_name: Enterprise Ubuntu 16.04 arm64
@@ -9123,6 +9129,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - amazon1-2018-small
 
 - name: amazon
   display_name: Amazon Linux
@@ -9174,6 +9182,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - amazon1-2018-small
 
 - name: enterprise-amazon2
   display_name: "Enterprise Amazon Linux 2"
@@ -9230,6 +9240,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - amazon2-small
 
 - name: amazon2
   display_name: Amazon Linux 2
@@ -9285,6 +9297,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - amazon2-small
 
 - name: tig-daily-cron
   modules:
@@ -9904,6 +9918,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+        - rhel62-small
   - name: server_discovery_and_monitoring_json_test_TG
 
 - name: enterprise-rhel-62-64-bit-large-txns-format
@@ -10357,7 +10373,7 @@ buildvariants:
     - ubuntu1604-packer
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - &enterprise-rhel-80-64-bit-template
   name: enterprise-rhel-80-64-bit
@@ -10414,6 +10430,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel80-small
 
 # This variant is to intentionally test uncommon features nightly
 - <<: *enterprise-rhel-70-64-bit-template
@@ -10572,6 +10590,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel62-small
 
 - name: rhel70
   display_name: RHEL 7.0
@@ -10622,7 +10642,7 @@ buildvariants:
     - ubuntu1604-packer
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: rhel80
   display_name: RHEL 8.0
@@ -10672,6 +10692,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel80-small
 
 # This variant compiles on RHEL 7.0 and runs tests on RHEL 7.6
 - name: rhel76_compile_rhel70
@@ -10736,7 +10758,7 @@ buildvariants:
   - name: .stitch
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: enterprise-rhel-72-s390x
   display_name: Enterprise RHEL 7.2 s390x
@@ -10787,7 +10809,7 @@ buildvariants:
   - name: .stitch
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: enterprise-rhel-67-s390x
   display_name: Enterprise RHEL 6.7 s390x
@@ -10831,7 +10853,7 @@ buildvariants:
   - name: secondary_reads_passthrough_gen
   - name: .publish
     distros:
-    - rhel62-large
+    - rhel62-small
 
 - name: rhel-72-s390x
   display_name: RHEL 7.2 s390x
@@ -10857,7 +10879,7 @@ buildvariants:
   - name: ssl_gen
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: rhel-67-s390x
   display_name: RHEL 6.7 s390x
@@ -10883,7 +10905,7 @@ buildvariants:
   - name: ssl_gen
   - name: .publish
     distros:
-    - rhel62-large
+    - rhel62-small
 
 ###########################################
 #          Ubuntu buildvariants           #
@@ -10937,6 +10959,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - ubuntu1604-small
 
 
 - name: enterprise-ubuntu-dynamic-1604-clang
@@ -11041,6 +11065,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - suse12-small
 
 - name: enterprise-suse12-s390x
   display_name: Enterprise SLES 12 s390x
@@ -11168,6 +11194,8 @@ buildvariants:
   - name: .ssl
   - name: .stitch
   - name: .publish
+    distros:
+    - suse12-small
 
 - name: enterprise-suse15-64
   display_name: Enterprise SLES 15
@@ -11206,6 +11234,8 @@ buildvariants:
   - name: snmp
   - name: .stitch
   - name: .publish
+    distros:
+    - suse15-small
 
 - name: suse15
   display_name: SUSE 15
@@ -11251,6 +11281,8 @@ buildvariants:
   - name: .ssl
   - name: .stitch
   - name: .publish
+    distros:
+    - suse15-small
 
 ###########################################
 #          Debian buildvariants           #
@@ -11302,6 +11334,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - debian92-small
 
 - name: debian92
   display_name: Debian 9.2
@@ -11354,6 +11388,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - debian92-small
 
 - name: enterprise-debian10-64
   display_name: Enterprise Debian 10
@@ -11401,6 +11437,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - debian10-small
 
 - name: debian10
   display_name: Debian 10
@@ -11453,6 +11491,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - debian10-small
 
 ################################
 # storage engine buildvariants #
