--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -7518,6 +7518,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - ubuntu1804-small
 
 - name: enterprise-ubuntu1804-64
   display_name: Enterprise Ubuntu 18.04
@@ -7564,6 +7566,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - ubuntu1804-small
 
 - name: ubuntu1604
   display_name: SSL Ubuntu 16.04
@@ -7629,6 +7633,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - ubuntu1604-small
 
 - name: enterprise-ubuntu1604-arm64
   display_name: Enterprise Ubuntu 16.04 arm64
@@ -7955,6 +7961,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - amazon1-2018-small
 
 - name: amazon
   display_name: SSL Amazon Linux
@@ -8008,6 +8016,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - amazon1-2018-small
 
 - name: enterprise-amazon2
   display_name: "Enterprise Amazon Linux 2"
@@ -8065,6 +8075,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - amazon2-small
 
 - name: amazon2
   display_name: SSL Amazon Linux 2
@@ -8122,6 +8134,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - amazon2-small
 
 - name: tig-daily-cron
   modules:
@@ -8764,6 +8778,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel62-small
 
 - name: enterprise-rhel-62-64-bit-large-txns-format
   display_name: "Enterprise RHEL 6.2 (large transactions format)"
@@ -9146,6 +9162,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel70-small
 
 - &enterprise-rhel-70-64-bit-template
   name: enterprise-rhel-70-64-bit
@@ -9206,7 +9224,7 @@ buildvariants:
     - ubuntu1604-packer
   - name: .publish
     distros:
-    - rhel70
+    - rhel80-small
 
 # This variant is to intentionally test uncommon features nightly
 - <<: *enterprise-rhel-70-64-bit-template
@@ -9314,6 +9332,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel62-small
 
 - name: rhel70
   display_name: SSL RHEL 7.0
@@ -9367,7 +9387,7 @@ buildvariants:
     - ubuntu1604-packer
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: rhel80
   display_name: SSL RHEL 8.0
@@ -9420,6 +9440,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel80-small
 
 # This variant compiles on RHEL 7.0 and runs tests on RHEL 7.6
 - name: rhel76_compile_rhel70
@@ -9494,7 +9516,7 @@ buildvariants:
   - name: .stitch
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: enterprise-rhel-72-s390x
   display_name: Enterprise RHEL 7.2 s390x
@@ -9551,7 +9573,7 @@ buildvariants:
   - name: .stitch
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: enterprise-rhel-67-s390x
   display_name: Enterprise RHEL 6.7 s390x
@@ -9604,7 +9626,7 @@ buildvariants:
   - name: secondary_reads_passthrough_gen
   - name: .publish
     distros:
-    - rhel62-large
+    - rhel62-small
 
 - name: rhel-72-s390x
   display_name: SSL RHEL 7.2 s390x
@@ -9633,7 +9655,7 @@ buildvariants:
   - name: ssl_gen
   - name: .publish
     distros:
-    - rhel70
+    - rhel70-small
 
 - name: rhel-67-s390x
   display_name: SSL RHEL 6.7 s390x
@@ -9662,7 +9684,7 @@ buildvariants:
   - name: ssl_gen
   - name: .publish
     distros:
-    - rhel62-large
+    - rhel62-small
 
 ###########################################
 #          Ubuntu buildvariants           #
@@ -9717,6 +9739,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - ubuntu1604-small
 
 
 - name: enterprise-ubuntu-dynamic-1604-clang
@@ -9803,6 +9827,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - suse12-small
 
 - name: enterprise-suse12-s390x
   display_name: Enterprise SLES 12 s390x
@@ -9941,6 +9967,8 @@ buildvariants:
   - name: .ssl
   - name: .stitch
   - name: .publish
+    distros:
+    - suse12-small
 
 - name: enterprise-suse15-64
   display_name: Enterprise SLES 15
@@ -9983,6 +10011,8 @@ buildvariants:
   - name: snmp
   - name: .stitch
   - name: .publish
+    distros:
+    - suse15-small
 
 - name: suse15
   display_name: SSL SUSE 15
@@ -10030,6 +10060,8 @@ buildvariants:
   - name: .ssl
   - name: .stitch
   - name: .publish
+    distros:
+    - suse15-small
 
 ###########################################
 #          Debian buildvariants           #
@@ -10083,6 +10115,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - debian92-small
 
 - name: enterprise-debian10-64
   display_name: Enterprise Debian 10
@@ -10132,6 +10166,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - debian10-small
 
 - name: debian92
   display_name: SSL Debian 9.2
@@ -10187,6 +10223,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - debian92-small
 
 - name: debian10
   display_name: Debian 10
@@ -10242,6 +10280,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - debian10-small
 
 ################################
 # storage engine buildvariants #
