--- a/buildscripts/resmokeconfig/suites/replica_sets_reconfig_kill_primary_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_reconfig_kill_primary_jscore_passthrough.yml
@@ -1,8 +1,9 @@
 test_kind: js_test
 # This suite starts a 5-node replica set and runs both the DoReconfigInBackground and
-# ContinuousStepdown hook to periodically run safe reconfigs and step downs against the
-# primary. This tests that the concurrency between stepdowns and reconfigs is still ultimately
-# safe.
+# ContinuousStepdown hook with kill: true and background_reconfig: true to periodically run
+# safe reconfigs and send kill signals to the primary.
+# This tests that the concurrency between killing the primary and reconfigs is still
+# ultimately safe.
 
 selector:
   roots:
@@ -72,6 +73,8 @@ selector:
   # Unacknowledged writes prohibited in an explicit session.
   - jstests/core/batch_write_command_w0.js
 
+  - jstests/core/bench_test*.js # benchRun() used for writes
+  - jstests/core/benchrun_pipeline_updates.js # benchRun() used for writes
   - jstests/core/connection_string_validation.js # Does not expect a replica set connection string.
   - jstests/core/list_collections_filter.js # Temporary collections are dropped on failover.
   - jstests/core/top.js # Tests read commands (including getMore) against the secondary
@@ -83,10 +86,15 @@ selector:
   # Tests that fail for Causal Consistency as they have statements that do not support
   # non-local read concern.
   - jstests/core/collation.js
-  # Parallel shell is not causally consistent
+  # Starts a parallel shell but won't restart it after unclean shutdown.
+  # TODO SERVER-33229: Remove these exclusions
+  - jstests/core/compact_keeps_indexes.js
   - jstests/core/benchrun_pipeline_updates.js
   - jstests/core/find_and_modify_concurrent_update.js
   - jstests/core/shellstartparallel.js
+
+  # Inserts enough data that recovery takes more than 8 seconds, so we never get a working primary.
+  - jstests/core/geo_s2ordering.js
 
   exclude_with_any_tags:
   ##
@@ -122,16 +130,23 @@ selector:
   - assumes_read_concern_unchanged
   # "Cowardly refusing to override write concern of command: ..."
   - assumes_write_concern_unchanged
+  ##
+  # The next three tags corresponds to the special errors thrown by the
+  # fail_unclean_shutdown_incompatible_commands.js override when it refuses to run commands that are
+  # inaccurate after an unclean shutdown. Above each tag is the message that causes the tag to be
+  # warranted.
+  ##
+  # "Cowardly fail if fastcount is run with a mongod that had an unclean shutdown: ..."
+  - requires_fastcount
+  # "Cowardly fail if dbStats is run with a mongod that had an unclean shutdown: ..."
+  - requires_dbstats
+  # "Cowardly fail if collStats is run with a mongod that had an unclean shutdown: ..."
+  - requires_collstats
+  # "Cowardly fail if unbounded dataSize is run with a mongod that had an unclean shutdown: ..."
+  - requires_datasize
   ## The next tag corresponds to long running-operations, as they may exhaust their number
   # of retries and result in a network error being thrown.
   - operations_longer_than_stepdown_interval
-  - does_not_support_causal_consistency
-  - uses_transactions
-  # collStats is not causally consistent
-  - requires_collstats
-  - requires_dbstats
-  - requires_datasize
-  - requires_sharding
 
 executor:
   archive:
@@ -147,9 +162,10 @@ executor:
         db = connect(TestData.connectionString);
         load("jstests/libs/override_methods/enable_sessions.js");
         load("jstests/libs/override_methods/set_read_and_write_concerns.js");
+        load("jstests/libs/override_methods/fail_unclean_shutdown_incompatible_commands.js");
+        load("jstests/libs/override_methods/fail_unclean_shutdown_start_parallel_shell.js");
       global_vars:
         TestData:
-          runningWithCausalConsistency: true
           alwaysInjectTransactionNumber: true
           defaultReadConcernLevel: "majority"
           logRetryAttempts: true
@@ -173,6 +189,8 @@ executor:
   hooks:
   - class: DoReconfigInBackground
   - class: ContinuousStepdown
+    kill: true
+    background_reconfig: true
   # The CheckReplDBHash hook waits until all operations have replicated to and have been applied
   # on the secondaries, so we run the ValidateCollections hook after it to ensure we're
   # validating the entire contents of the collection.
