--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -6228,6 +6228,16 @@ tasks:
     vars:
       resmoke_args: --suites=replica_sets_reconfig_jscore_stepdown_passthrough --storageEngine=wiredTiger
 
+- <<: *task_template
+  name: replica_sets_reconfig_kill_primary_jscore_passthrough
+  depends_on:
+  - name: jsCore
+  commands:
+  - func: "do setup"
+  - func: "run tests"
+    vars:
+      resmoke_args: --suites=replica_sets_reconfig_kill_primary_jscore_passthrough --storageEngine=wiredTiger
+
 - name: replica_sets_jscore_passthrough_gen
   depends_on:
   - name: jsCore
@@ -10070,6 +10080,7 @@ buildvariants:
     - rhel62-large
   - name: replica_sets_reconfig_jscore_passthrough
   - name: replica_sets_reconfig_jscore_stepdown_passthrough
+  - name: replica_sets_reconfig_kill_primary_jscore_passthrough
   - name: retryable_writes_jscore_passthrough_gen
   - name: retryable_writes_jscore_stepdown_passthrough
     distros:
