--- a/src/mongo/db/s/SConscript
+++ b/src/mongo/db/s/SConscript
@@ -31,6 +31,16 @@ env.Library(
 )
 
 env.Library(
+    target='sharding_runtime_d_params',
+    source=[
+        env.Idlc('sharding_runtime_d_params.idl')[0],
+    ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/idl/server_parameter',
+    ],
+)
+
+env.Library(
     target='sharding_runtime_d',
     source=[
         'active_migrations_registry.cpp',
@@ -74,7 +84,6 @@ env.Library(
         'split_chunk.cpp',
         'split_vector.cpp',
         'start_chunk_clone_request.cpp',
-        env.Idlc('sharding_runtime_d_params.idl')[0],
         env.Idlc('range_deletion_task.idl')[0],
         env.Idlc('migration_coordinator_document.idl')[0],
     ],
@@ -99,6 +108,7 @@ env.Library(
         'sharding_api_d',
         'sharding_catalog_manager',
         'sharding_logging',
+        'sharding_runtime_d_params',
         'transaction_coordinator',
     ],
     LIBDEPS_PRIVATE=[
@@ -209,6 +219,9 @@ env.Library(
         '$BUILD_DIR/mongo/s/client/sharding_client',
         '$BUILD_DIR/mongo/s/coreshard',
         'sharding_logging',
+    ],
+    LIBDEPS_PRIVATE=[
+        'sharding_runtime_d_params',
     ],
 )
 
